classDiagram
    %%
    %% nextflow.cache
    %%
    Session --* CacheDB

    CacheDB --* CacheStore

    CacheStore <|-- DefaultCacheStore
    CacheStore <|-- CloudCacheStore

    class DefaultCacheStore {
        uniqueId : UUID
        runName : String
        baseDir : Path
    }

    class CloudCacheStore {
        uniqueId : UUID
        runName : String
        basePath : Path
    }